# efs-zeropilot-4.0

./: README.md
.github/workflows/: compile_test.yaml  linting_test.yaml  stm32_build.yaml  unit_test.yaml
stm32l552xx/: .cproject  stm32l552xx.ioc
stm32l552xx/Core/Inc/: stm32l5xx_it.h
stm32l552xx/Core/Src/: stm32l5xx_hal_msp.c  stm32l5xx_it.c
stm32l552xx/boardfiles/: override.cpp
stm32l552xx/boardfiles/drivers/: readme.md
stm32l552xx/boardfiles/drivers/gps/: gps.cpp  gps.hpp
stm32l552xx/boardfiles/drivers/motor/: motor.hpp
stm32l552xx/boardfiles/drivers/queue/: queue.hpp
stm32l552xx/boardfiles/drivers/rc/: rc.cpp  rc.hpp  rc_defines.hpp
stm32l552xx/boardfiles/drivers/systemutils/: systemutils.cpp  systemutils.hpp
stm32l552xx/boardfiles/model/inc/: drivers.hpp
stm32l552xx/boardfiles/model/src/: drivers.cpp  managers.cpp
stm32l552xx/boardfiles/rtos/threads/inc/: startup_threads.hpp  unified_threads.hpp
stm32l552xx/boardfiles/rtos/threads/src/: am_threads.cpp  sm_threads.cpp  startup_threads.cpp  unified_threads.cpp
zeropilot4.0/: .clang-tidy  CMakeLists.txt  common.cmake  hwbuild.bash  lint.bash
zeropilot4.0/include/attitude_manager/: attitude_manager.hpp  direct_mapping.hpp  flightmode.hpp
zeropilot4.0/include/driver_ifaces/: gps_datatypes.hpp  gps_iface.hpp  iwdg_iface.hpp  logger_iface.hpp  motor_datatype.hpp  motor_iface.hpp  queue_iface.hpp  rc_datatypes.hpp  rc_iface.hpp  rfd_iface.hpp  systemutils_iface.hpp
zeropilot4.0/include/system_manager/: system_manager.hpp
zeropilot4.0/include/telemetry_manager/: telemetry_manager.hpp
zeropilot4.0/include/thread_msgs/: rc_motor_control.hpp  tm_queue.hpp
zeropilot4.0/src/attitude_manager/: attitude_manager.cpp  direct_mapping.cpp
zeropilot4.0/src/system_manager/: system_manager.cpp
zeropilot4.0/src/telemetry_manager/: telemetry_manager.cpp
zeropilot4.0/tests/: CMakeLists.txt  testbuild.bash  testbuild.bat
zeropilot4.0/tests/driver_mocks/: gps_mock.hpp  iwdg_mock.hpp  logger_mock.hpp  motor_mock.hpp  queue_mock.hpp  rc_mock.hpp
